update some notebook files

--- a/notebook/Process_train_data.ipynb
+++ b/notebook/Process_train_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "35c22d34",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f13245b6",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "380a02ad",
    "metadata": {},
    "outputs": [],
@@ -38,10 +38,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b319d08f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "641d020787b74562b00cca6f36388526",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Processing training data:   0%|          | 0/3196 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "train_data_path = os.path.join(DATASET_DIR, \"train_question_answer.json\")\n",
     "corpus_data_path = os.path.join(DATASET_DIR, \"processed_legal_corpus.json\")\n",
@@ -59,7 +74,7 @@
     "with open(output_path, \"w\", encoding=\"utf-8\") as out_file:\n",
     "    out_file.write(\"[\\n\")\n",
     "\n",
-    "    for i, item in enumerate(tqdm(train_data_items, total=total_items, desc=\"Processing training data\"))\n",
+    "    for i, item in enumerate(tqdm(train_data_items, total=total_items, desc=\"Processing training data\")):\n",
     "        relevant_articles = item[\"relevant_articles\"]\n",
     "        for article in relevant_articles:\n",
     "            pair = []\n",
@@ -92,7 +107,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.16"
   }
  },
