--- a/notebook/Word2Vec_tfidf.ipynb
+++ b/notebook/Word2Vec_tfidf.ipynb
@@ -92,11 +92,11 @@
     "w2v_model = Word2Vec(\n",
     "    sentences=tokenized_sentences,\n",
     "    vector_size=10000,\n",
-    "    window=5,\n",
+    "    window=3,\n",
     "    min_count=1,\n",
     "    sg=0,  # skip-gram sg=1, nếu muốn CBOW thì dùng sg=0\n",
-    "    workers=5,\n",
-    "    epochs=10\n",
+    "    workers=4,\n",
+    "    epochs=20\n",
     ")\n",
     "\n",
     "w2v_model.save(os.path.join(VECTORIZER_DIR, \"w2v.model\"))"
@@ -110,7 +110,7 @@
    "outputs": [],
    "source": [
     "# Load for after use\n",
-    "w2v_model = Word2Vec.load(os.path.join(VECTORIZER_DIR, \"w2v.model\"))\n",
+    "w2v_model = Word2Vec.load(os.path.join(VECTORIZER_DIR,\"w2v\", \"w2v.model\"))\n",
     "# Load tf_idf for vectorizer\n",
     "tfidf_vectorizer = joblib.load(os.path.join(VECTORIZER_DIR, 'tfidf_vectorizer.pkl'))"
    ]
@@ -240,15 +240,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def processing_query(query, segmentation_model):\n",
-    "    query_list = vncorenlp_model.word_segment(query) # segment\n",
+    "def clean_query(query, segmentation_model):\n",
+    "    query_list = segmentation_model.word_segment(query) # segment\n",
     "    query = \" \".join(query_list) \n",
     "    query = re.sub(pattern, \"\", query) # remove stop word\n",
     "    query = re.sub(r\"\\s+\", \" \", query).strip() # Remove the redundancy\n",
     "    query_word = [token for token in query.split() if token not in string.punctuation]\n",
-    "    clean_query = ' '.join(query_word)\n",
+    "    cleaned_query = ' '.join(query_word)\n",
     "\n",
-    "    return clean_query\n"
+    "    return cleaned_query\n"
    ]
   },
   {
@@ -260,8 +260,8 @@
    "source": [
     "# 5. Nhập câu truy vấn và biến thành vector\n",
     "query = \"Đập phá biển báo “khu vực biên giới” bị phạt thế nào?\"\n",
-    "clean_query = processing_query(query, vncorenlp_model)\n",
-    "query_vec = get_weighted_sentence_vector(clean_query, w2v_model, tfidf_vectorizer)\n",
+    "cleaned_query = clean_query(query, vncorenlp_model)\n",
+    "query_vec = get_weighted_sentence_vector(cleaned_query, w2v_model, tfidf_vectorizer)\n",
     "query_vec = normalize(query_vec.reshape(1, -1))[0]\n",
     "\n",
     "# 6. Truy vấn Qdrant\n",
