--- a/notebook/tfidf_BM25Search.ipynb
+++ b/notebook/tfidf_BM25Search.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a10fcf1b",
    "metadata": {},
    "outputs": [],
@@ -25,8 +25,7 @@
     "from qdrant_client import QdrantClient\n",
     "from qdrant_client.http.models import Filter, FieldCondition, MatchAny\n",
     "from rank_bm25 import BM25Okapi\n",
-    "from sklearn.preprocessing import normalize\n",
-    "import numpy as np\n"
+    "from sklearn.preprocessing import normalize\n"
    ]
   },
   {
@@ -151,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "0440abb9",
    "metadata": {},
    "outputs": [],
@@ -164,13 +163,13 @@
     "        LOAD THE TFIDF VECTORIZER\n",
     "\"\"\"\n",
     "def get_result(query, vectorizer, bm25, segmented_model, client, N = 50):\n",
-    "    clean_query = precessing_query(query, segmented_model)\n",
+    "    cleaned_query = precessing_query(query, segmented_model)\n",
     "\n",
     "    # filter by bm25\n",
-    "    bm25_scores = bm25.get_scores(clean_query.split())\n",
+    "    bm25_scores = bm25.get_scores(cleaned_query.split())\n",
     "    top_n_idx = sorted(range(len(bm25_scores)), key=lambda i: -bm25_scores[i])[:N]\n",
     "\n",
-    "    query_vec = vectorizer.transform([clean_query])\n",
+    "    query_vec = vectorizer.transform([cleaned_query])\n",
     "    query_vec = normalize(query_vec).toarray()[0]\n",
     "\n",
     "    hits = client.search(\n",
