--- a/notebook/GloVe.ipynb
+++ b/notebook/GloVe.ipynb
@@ -15,13 +15,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9d9a7f86",
    "metadata": {},
    "outputs": [],
    "source": [
     "model = VnCoreNLP(\n",
-    "    save_dir=r\"C:\\Users\\Admin\\Documents\\2024.2\\NLP\\Project\\VnCoreNLP-master\",\n",
+    "    save_dir = \"D:/VnCoreNLP\",\n",
     "    max_heap_size='-Xmx2g',\n",
     "    annotators=[\"wseg\"]\n",
     ")"
@@ -1338,14 +1338,6 @@
    "source": [
     "vectors = train_glove(matrix, vocab_size=len(vocab), embedding_dim=100, epochs=100)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c6d6fd1a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
