--- a/notebook/Glove_tfidf.ipynb
+++ b/notebook/Glove_tfidf.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4844634d",
+   "id": "d8a5edd1",
    "metadata": {},
    "source": [
-    "# **Combination between Word2Vec and TF_IDF**"
+    "# **Combination between Glove and TF_IDF**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c160cf03",
+   "execution_count": 1,
+   "id": "5713461a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,9 +20,8 @@
     "import py_vncorenlp\n",
     "import numpy as np\n",
     "import re\n",
-    "import string\n",
     "import joblib\n",
-    "from gensim.models import Word2Vec\n",
+    "import string\n",
     "\n",
     "from qdrant_client import QdrantClient\n",
     "from qdrant_client.models import VectorParams, Distance\n",
@@ -31,8 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "43d5537c",
+   "execution_count": 2,
+   "id": "c4528969",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,10 +45,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fa089ae9",
+   "execution_count": 3,
+   "id": "271461df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "61425\n",
+      "61425\n"
+     ]
+    }
+   ],
    "source": [
     "with open(data_path, \"r\", encoding=\"utf-8\") as json_file:\n",
     "    data = json.load(json_file)\n",
@@ -73,56 +81,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "88207262",
+   "execution_count": 4,
+   "id": "d23b79e1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenized_sentences = [sentence.split() for sentence in content]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "929dcf64",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Training\n",
-    "w2v_model = Word2Vec(\n",
-    "    sentences=tokenized_sentences,\n",
-    "    vector_size=10000,\n",
-    "    window=5,\n",
-    "    min_count=1,\n",
-    "    sg=1,  # skip-gram sg=1, nếu muốn CBOW thì dùng sg=0\n",
-    "    workers=4,\n",
-    "    epochs=20\n",
-    ")\n",
-    "        \n",
-    "w2v_model.save(os.path.join(VECTORIZER_DIR, \"w2v\", \"w2v.model\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "219bbec0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load for after use\n",
-    "w2v_model = Word2Vec.load(os.path.join(VECTORIZER_DIR,\"w2v\", \"w2v.model\"))\n",
+    "Glove_path = os.path.join(VECTORIZER_DIR, \"Glove_word_embed.json\")\n",
+    "with open(Glove_path, 'r', encoding='utf-8') as f:\n",
+    "    Glove_word_embed = json.load(f)\n",
+    "\n",
     "# Load tf_idf for vectorizer\n",
     "tfidf_vectorizer = joblib.load(os.path.join(VECTORIZER_DIR, 'tfidf_vectorizer.pkl'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "511664a9",
+   "execution_count": 9,
+   "id": "9f804b09",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_weighted_sentence_vector(sentence, w2v_model, tfidf_vectorizer):\n",
+    "def get_weighted_sentence_vector(sentence, Glove_word_embed: dict, tfidf_vectorizer):\n",
     "    tfidf_scores = tfidf_vectorizer.transform([sentence])\n",
     "    feature_names = tfidf_vectorizer.get_feature_names_out()\n",
     "    tfidf_dict = {\n",
@@ -134,8 +113,8 @@
     "    word_vecs = []\n",
     "    weights = []\n",
     "    for word in words:\n",
-    "        if word in w2v_model.wv and word in tfidf_dict:\n",
-    "            vec = w2v_model.wv[word]\n",
+    "        if word in list(Glove_word_embed.keys()) and word in tfidf_dict:\n",
+    "            vec = np.array(Glove_word_embed[word], dtype=np.float64)\n",
     "            weight = tfidf_dict[word]\n",
     "            word_vecs.append(vec * weight)\n",
     "            weights.append(weight)\n",
@@ -143,31 +122,26 @@
     "    if word_vecs:\n",
     "        return np.sum(word_vecs, axis=0) / np.sum(weights)\n",
     "    else:\n",
-    "        return np.zeros(w2v_model.vector_size)"
+    "        return np.zeros(len(Glove_word_embed[list(Glove_word_embed.keys())[0]]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a426371f",
+   "execution_count": 10,
+   "id": "ad8ab60a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(61425, 100)\n"
+     ]
+    }
+   ],
    "source": [
-    "# content: list of sentences\n",
-    "# tokenized_sentences: list of list of words (tokens) in each sentence\n",
-    "# index: payload for database"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d2be0d42",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1. Normalize the vectors\n",
     "sentence_vectors = np.array([\n",
-    "    get_weighted_sentence_vector(sentence, w2v_model, tfidf_vectorizer)\n",
+    "    get_weighted_sentence_vector(sentence, Glove_word_embed, tfidf_vectorizer)\n",
     "    for sentence in content\n",
     "])\n",
     "\n",
@@ -177,17 +151,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "296fdac4",
+   "execution_count": 11,
+   "id": "37d3614f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_34152\\576374423.py:5: DeprecationWarning: `recreate_collection` method is deprecated and will be removed in the future. Use `collection_exists` to check collection existence and `create_collection` instead.\n",
+      "  client.recreate_collection(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "61425\n",
+      "61425\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. Connect to Qdrant\n",
-    "client = QdrantClient(host=\"localhost\", port=6333)\n",
+    "client = QdrantClient(host=\"localhost\", port=6333, timeout=60.0)\n",
     "\n",
     "# 3. Tạo collection\n",
     "client.recreate_collection(\n",
-    "    collection_name=\"Word2Vec_Law_document_retrivial\",\n",
+    "    collection_name=\"Glove_Law_document_retrivial\",\n",
     "    vectors_config=VectorParams(size=normalized_vectors.shape[1], distance=Distance.COSINE) # Using Cosinesimilarity for searching vector\n",
     ")\n",
     "\n",
@@ -208,19 +199,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c8668ab6",
+   "execution_count": 13,
+   "id": "2d717528",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Upload the data to Qdrant collection\n",
     "for i in range(0, len(points), 100):\n",
-    "    client.upsert(collection_name=\"Word2Vec_Law_document_retrivial\", points=points[i:i+100])"
+    "    client.upsert(collection_name=\"Glove_Law_document_retrivial\", points=points[i:i+100])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7ee64daf",
+   "id": "b1060f56",
    "metadata": {},
    "source": [
     "# **USING**"
@@ -228,8 +219,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "eac0faff",
+   "execution_count": 14,
+   "id": "23be4df6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,8 +234,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a0628b55",
+   "execution_count": 15,
+   "id": "58132467",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,25 +247,50 @@
     "    query_word = [token for token in query.split() if token not in string.punctuation]\n",
     "    cleaned_query = ' '.join(query_word)\n",
     "\n",
-    "    return cleaned_query\n"
+    "    return cleaned_query"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "429be93a",
+   "execution_count": 17,
+   "id": "5b7cc1c3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score: 0.8234 | law_id: 71/2015/nđ-cp | article_id: 5 \n",
+      "Score: 0.8090 | law_id: 34/2014/nđ-cp | article_id: 9 \n",
+      "Score: 0.7946 | law_id: 09/2016/tt-bqp | article_id: 5 \n",
+      "Score: 0.7752 | law_id: 43/2015/tt-bqp | article_id: 5 \n",
+      "Score: 0.7550 | law_id: 47/2015/tt-bqp | article_id: 7 \n",
+      "Score: 0.7419 | law_id: 96/2020/nđ-cp | article_id: 10 \n",
+      "Score: 0.7145 | law_id: 43/2015/tt-bqp | article_id: 12 \n",
+      "Score: 0.6965 | law_id: 71/2015/nđ-cp | article_id: 17 \n",
+      "Score: 0.6933 | law_id: 32/2014/tt-bgtvt | article_id: 12 \n",
+      "Score: 0.6807 | law_id: 71/2015/nđ-cp | article_id: 3 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_34152\\2437991530.py:8: DeprecationWarning: `search` method is deprecated and will be removed in the future. Use `query_points` instead.\n",
+      "  hits = client.search(\n"
+     ]
+    }
+   ],
    "source": [
     "# 5. Nhập câu truy vấn và biến thành vector\n",
     "query = \"Đập phá biển báo “khu vực biên giới” bị phạt thế nào?\"\n",
     "cleaned_query = clean_query(query, vncorenlp_model)\n",
-    "query_vec = get_weighted_sentence_vector(cleaned_query, w2v_model, tfidf_vectorizer)\n",
+    "query_vec = get_weighted_sentence_vector(cleaned_query, Glove_word_embed, tfidf_vectorizer)\n",
     "query_vec = normalize(query_vec.reshape(1, -1))[0]\n",
     "\n",
     "# 6. Truy vấn Qdrant\n",
     "hits = client.search(\n",
-    "    collection_name=\"Word2Vec_Law_document_retrivial\",\n",
+    "    collection_name=\"Glove_Law_document_retrivial\",\n",
     "    query_vector=query_vec,\n",
     "    limit=10\n",
     ")\n",
